@@ -1,8 +1,8 @@
 #!/bin/bash
 
 CMD="g++ -o driver -Wall -I../ driver.cc -L../tmp -lbigint -lbobcat -s"
-
-# CMD="g++ -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib -lbobcat -lssl -s"
+# CMD="g++ -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib -lbobcat -s"
+# CMD="g++ -o driver -Wall -I../ driver.cc -L../tmp -lbigint -lbobcat -s"
 
 # CMD="g++ -o driver -Wall *.cc -lbobcat -s"
 
