@@ -1,17 +1,12 @@
 #include "bigint.ih"
 
-namespace FBB
-{
-
-BigInt const inverseMod(BigInt const &lhs, BigInt const &mod)
+BigInt const BigInt::inverseMod(BigInt const &mod)
 {
     BNCTX ctx;
     BigInt ret;
 
-    if (BN_mod_inverse(&ret.d_bn, &lhs.d_bn, &mod.d_bn, ctx) == 0)
+    if (BN_mod_inverse(&ret.d_bn, &d_bn, &mod.d_bn, ctx) == 0)
         throw Errno("BigInt::inverseMod failed");
 
     return ret;
 }
-
-} // FBB
