@@ -1,9 +1,9 @@
 #include "bigint.ih"
 
-BigInt &BigInt::setBigEndian(std::string const &bytes, bool negative)
+BigInt const BigInt::setBigEndian(std::string const &bytes)
 {
+    BigInt tmp;
     BN_bin2bn(reinterpret_cast<unsigned char const *>(bytes.data()), 
-                bytes.length(), &d_bn);
-    setNegative(negative);
-    return *this;
+                bytes.length(), &tmp.d_bn);
+    return tmp;
 }
