@@ -4,6 +4,11 @@ bobcat (2.05.00)
     except for octal values.
   * BigInt values can be assigned a value from a textual representation
   * BigInt values can be extracted from std::istream objects.
+  * BigInt::inverseMod() and BigInt::gcd() are now member functions rather
+    than free functions.
+  * BigInt::setBigEndian() is now a static member function. In general: all
+    members returning a BigInt computed from a set of arguments and not
+    requiring an existing BigInt object are defined as static members.
   * Added MD_CTX initialization and cleanup calls to DigestBuf
   * Added MD_CTX initialization call to HMacBuf
 
